# ADN

./: .gitignore  CHANGELOG.md  Cargo.toml  NEXT_STEPS.md  README.md  dist-workspace.toml  test.txt
src/: cmd.rs  indexer.rs  main.rs  models.rs  schema.sql
src/cmd/: index.rs  inspect.rs  ls.rs  mcp.rs  search.rs  stats.rs  trace.rs
src/indexer/: parser.rs  walker.rs
src/indexer/languages/: python.rs
src/storage/: db.rs  query.rs  schema.rs
tests/: mcp_server.rs  process_harness.rs  query_engine.rs
tests/fixtures/mcp_sample/: main.py
tests/fixtures/query_sample/: core.py  mid.py  search_space.py  top.py
tests/support/: mod.rs
