[package]
name = "adn"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI & Logging
clap = { version = "4.5.61", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

# Parsing & Concurrency
tree-sitter = "0.26.7"
tree-sitter-typescript = "0.23.2"
tree-sitter-python = "0.25.0"
ignore = "0.4.25"
rayon = "1.11.0"

# Storage
rusqlite = { version = "0.39.0", features = ["bundled"] }
uuid = { version = "1.22.0", features = ["v4"] }

# Error Handling
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
blake3 = "1.5"
