[package]
name = "adn-server"
version = "0.1.3"
edition = "2021"
description = "Architectural Discovery Navigation — a high-performance code knowledge graph and MCP server for AI agents."
license = "Apache-2.0"
repository = "https://github.com/DakshBardoliwala/ADN"
homepage = "https://github.com/DakshBardoliwala/ADN"
documentation = "https://github.com/DakshBardoliwala/ADN#readme"
readme = "README.md"
keywords = ["mcp", "static-analysis", "python", "graph", "indexer"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "adn"
path = "src/main.rs"

[dependencies]
# CLI & Logging
clap = { version = "4.5.61", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

# Parsing & Concurrency
tree-sitter = "0.26.7"
tree-sitter-typescript = "0.23.2"
tree-sitter-python = "0.25.0"
ignore = "0.4.25"
rayon = "1.11.0"

# Storage
rusqlite = { version = "0.39.0", features = ["bundled"] }
uuid = { version = "1.22.0", features = ["v4"] }

# Error Handling
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
blake3 = "1.5"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
